<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="bottom"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittel"
        android:layout_weight="0"
        android:layout_gravity="top" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center"
        android:paddingTop="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/galgen"
            android:background="@color/white"
            android:src="@drawable/galgen"/>

        <ImageView
            android:id="@+id/hode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hode"
            android:src="@drawable/hode"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/kroppen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/kroppen"
            android:src="@drawable/kroppen"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm1"
            android:src="@drawable/arm1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm2"
            android:src="@drawable/arm2"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/bein1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bein1"
            android:src="@drawable/bein1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/bein2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bein2"
            android:src="@drawable/bein2"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ordet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">


    </LinearLayout>

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image"/>-->

    <TableRow
        android:id="@+id/bokstaver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="Q"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="W"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="E"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="R"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="T"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="Y"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="U"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="I"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="O"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="P"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="Å"
            android:onClick="bokstavTrykket"/>

    </TableRow>

    <TableRow
        android:id="@+id/bokstaver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="A"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="S"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="D"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="F"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="G"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="H"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="J"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="K"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="L"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="Ø"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="Æ"
            android:onClick="bokstavTrykket"/>

    </TableRow>

    <TableRow
        android:id="@+id/bokstaver3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="Z"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="C"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="V"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="B"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:text="N"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="M"
            android:layout_weight="1"
            android:onClick="bokstavTrykket"/>
    </TableRow>
</LinearLayout>
